# unleash-governance-proxy

./: .env.example  .gitignore  AUTHORS  Dockerfile  PUSH-TO-GITHUB.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  audit.py  auth.py  authorization.py  config.py  idempotency.py  idempotency_cleanup.py  logging_config.py  main.py  metrics.py  observability.py  unleash_client.py
app/ai/: __init__.py  agent.py  anomaly.py  llm.py  metrics.py  nl_query.py  prompts.py  risk.py  suggestions.py  summarizer.py
app/db/: __init__.py  models.py  session.py
app/models/: __init__.py  schemas.py
app/routers/: ai.py  audit.py  change_requests.py  flags.py
app/static/: index.html
app/static/css/: dashboard.css
app/static/js/: dashboard.js
docs/: AI_FEATURES.md  ARCHITECTURE.md
migrations/: env.py
migrations/versions/: 001_initial.py  002_audit_hash_chain.py
policies/: allowlist.yaml
tests/: __init__.py  conftest.py  test_ai_unit.py  test_api.py  test_audit_chain.py  test_concurrency.py
tests/evals/: golden_agent_qa.yaml  judge.py  test_agent_eval.py  test_agent_live_eval.py  test_nl_query_eval.py
tests/load/: locustfile.py
